<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.github.mygreen.sqlmapper</groupId>
	<artifactId>sqlmapper-root</artifactId>
	<name>SqlMapper</name>
	<packaging>pom</packaging>
	<version>${revision}</version>
	<description><![CDATA[ SqlMapper is Java Library for mapping SQL to POJO. ]]></description>

	<modules>
		<module>sqlmapper-core</module>
		<module>sqlmapper-metamodel</module>
		<module>sqlmapper-apt</module>
		<module>sqlmapper-spring-boot</module>
		<module>sqlmapper-sample</module>
	</modules>

	<properties>
		<revision>0.2</revision>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>11</java.version>
		<slf4j.version>1.7.25</slf4j.version>
		<logback.version>1.2.3</logback.version>
	</properties>

	<issueManagement>
		<system>github</system>
		<url>https://github.com/mygreen/sqlmapper/issues</url>
	</issueManagement>

	<scm>
		<connection>scm:git:ssh://github.com/mygreen/sqlmapper.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/mygreen/sqlmapper.git</developerConnection>
		<url>https://github.com/mygreen/sqlmapper</url>
	</scm>

	<parent>
		<groupId>org.sonatype.oss</groupId>
		<artifactId>oss-parent</artifactId>
		<version>7</version>
	</parent>

	<distributionManagement>
		<repository>
			<id>sonatype-nexus-staging</id>
			<name>Maven Central Repository</name>
			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
		</repository>
	</distributionManagement>

	<licenses>
		<license>
			<name>The Apache Software License, Version 2.0</name>
			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
		</license>
	</licenses>

	<organization>
		<name>mygreen</name>
		<url>http://mygreen.github.io/sqlmapper/</url>
	</organization>

	<developers>
		<developer>
			<id>mygreen</id>
			<name>Tatsuo TSUCHIE</name>
			<url>http://mygreen.github.io/sqlmapper/</url>
			<roles>
				<role>developer</role>
			</roles>
		</developer>
	</developers>

	<repositories>
	</repositories>

	<pluginRepositories>
	</pluginRepositories>

	<build>
		<plugins>
			<plugin>
				<groupId>org.projectlombok</groupId>
				<artifactId>lombok-maven-plugin</artifactId>
				<version>1.18.20.0</version>
				<executions>
					<execution>
						<id>delombok</id>
						<phase>generate-sources</phase>
						<goals>
							<goal>delombok</goal>
						</goals>
						<configuration>
							<addOutputDirectory>false</addOutputDirectory>
							<sourceDirectory>src/main/java</sourceDirectory>
							<encoding>${project.build.sourceEncoding}</encoding>
	                    </configuration>
					</execution>
					<execution>
						<id>test-delombok</id>
						<phase>generate-test-sources</phase>
						<goals>
							<goal>testDelombok</goal>
						</goals>
						<configuration>
							<addOutputDirectory>false</addOutputDirectory>
							<sourceDirectory>src/test/java</sourceDirectory>
							<encoding>${project.build.sourceEncoding}</encoding>
	                    </configuration>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<source>${java.version}</source>
					<encoding>${project.build.sourceEncoding}</encoding>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<locale>ja_JP</locale>
					<maxmemory>1024m</maxmemory>
					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
					<sourcepath>
						sqlmapper-core/target/generated-sources/delombok
						;sqlmapper-metamodel/target/generated-sources/delombok
						;sqlmapper-apt/target/generated-sources/delombok
					</sourcepath>
					<groups>
						<group>
							<title>Core</title>
							<packages>com.github.mygreen.sqlmapper.core*</packages>
						</group>
						<group>
							<title>Metamodel</title>
							<packages>com.github.mygreen.sqlmapper.metamodel*</packages>
						</group>
						<group>
							<title>APT</title>
							<packages>com.github.mygreen.sqlmapper.apt*</packages>
						</group>
					</groups>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<dependencies>
		<!-- Utility -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.20</version>
			<scope>provided</scope>
		</dependency>

		<!-- Test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.5.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.13.2</version>
			<scope>test</scope>
		</dependency>


		<!-- Logger -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>jcl-over-slf4j</artifactId>
			<version>${slf4j.version}</version>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<version>${logback.version}</version>
		</dependency>

	</dependencies>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.2.0</version>
				<configuration>
					<source>${java.version}</source>
					<encoding>${project.build.sourceEncoding}</encoding>
					<charset>UTF-8</charset>
					<docencoding>UTF-8</docencoding>
					<locale>ja_JP</locale>
					<javadocExecutable>${java.home}/bin/javadoc</javadocExecutable>
					<aggregate>true</aggregate>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jxr-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<aggregate>true</aggregate>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
				</configuration>
			</plugin>
		</plugins>
	</reporting>

</project>
